[metadata]
name = pyclacker
version = attr: pyclacker.version.__version__
author = Josh Tompkin
author_email = jtompkin-dev@pm.me
description = Command line reverse polish notation (RPN) calculator.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = calculator, calc, reverse, polish, rpn
url = https://github.com/jtompkin/pyclacker
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packagess = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyclacker = pyclacker.pyclacker:main
